# progcon

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  Dockerfile  Dockerfile.build  LICENSE  Makefile  README.md  docker-compose.yml  todo.txt
bot/: Cargo.toml
bot/contest-exec/: Cargo.toml  Makefile
bot/contest-exec/src/: main.rs  util.rs
bot/src/: main.rs  problems.rs  response.rs  submission.rs
bot/src/testers/: base.rs  java.rs  mod.rs
docker/: Dockerfile
sample-problems/: LICENSE
sample-problems/Fibonacci/: Fibonacci.java  Runner.java  fibonacci.html  problem.toml
sample-problems/Fibonacci/doc/: badcompile.java  crash.java  fail.java  policy.java  slow.java  tooslow.java
sample-problems/Fibonacci/tests/: 01.out  02.in
sample-problems/fibonacci/: problem.toml
sample-problems/fibonacci/doc/: Fibonacci.java
web/: .babelrc  .eslintrc.js  .gitignore  gulpfile.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
web/browser/: app.js  app.jsx  app.tsx  config.template.js  globals.d.ts  reducer.ts  routes.tsx  store.js  store.ts  tsconfig.json  vendor.d.ts
web/browser/components/: AuthForm.jsx  AuthForm.tsx  AutoRefresh.jsx  AutoRefresh.tsx  ProblemCard.tsx  SafetyBox.jsx  SafetyBox.tsx  SolutionUploader.jsx  SolutionUploader.tsx  SubmissionStatus.tsx  Timer.tsx
web/server/: _config.js  config.template.js  index.js  index.jsx  index.ts  tsconfig.json  vendor.d.ts
web/shared/: reducer.js  routes.jsx  store.js
web/sql/: create.sql  drop.sql
web/styles/: _bootstrap_overrides.scss  style.scss
(+97 files in other folders)
