[package]
name = "progcon-bot"
version = "0.1.0"
authors = ["Jacob Peddicord <jacob@peddicord.net>"]

[dependencies]
env_logger = "0.3.3"
log = "0.3.6"
rustc-serialize = "0.3.19"
tempdir = "0.3.4"
toml = "0.2.1"

[dependencies.nanomsg]
version = "0.6.1"
features = ["bundled", "no_anl"]

# explicit bin section to abuse cargo fetch for docker caching
[[bin]]
name = "progcon-bot"
path = "src/main.rs"
