[package]
name = "progcon-bot"
version = "0.2.0"
authors = ["Jacob Peddicord <jacob@peddicord.net>"]

[dependencies]
env_logger = "0.3.3"
log = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3.4"
toml = "0.2.1"

[dependencies.nanomsg]
version = "0.6.1"
features = ["bundled", "no_anl"]

# explicit bin section to abuse cargo fetch for docker caching
[[bin]]
name = "progcon-bot"
path = "src/main.rs"
