[package]
name = "contest-exec"
version = "0.1.0"
authors = ["Jacob Peddicord <jacob@peddicord.net>"]

[dependencies]
libc = "0.2.22"
rand = "0.3.14"
wait-timeout = "0.1.3"
walkdir = "0.1.8"

# explicit bin section to abuse cargo fetch for docker caching
[[bin]]
name = "contest-exec"
path = "src/main.rs"
